--- a/Codice/pom.xml
+++ b/Codice/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>21</javafx.version>
+  <sonar.organization>marcomigl</sonar.organization>
     </properties>
 
     <dependencies>
