--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -58,7 +58,7 @@ jobs:
             -Dsonar.projectKey=MarcoMigl_Prova
             -Dsonar.organization=marcomigl
             -Dsonar.projectName=Prova
-            -Dsonar.sources=.
+            -Dsonar.sources=Codice
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # Comma-separated paths to directories containing test source files.
