--- a/.github/workflows/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/.github/workflows/sonarcloud.yml
@@ -1,22 +1,42 @@
-name: SonarCloud analysis
+name: SonarCloud Scan
 
 on:
   push:
     branches:
       - main
-      - master
   pull_request:
+    branches:
+      - main
 
 jobs:
   sonarcloud:
-    name: SonarCloud
+    name: SonarCloud Analysis
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout del repo
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
+      # Step 2: Setup Java (necessario per SonarScanner)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      # Step 3: Debug – verifica file presenti (opzionale)
+      - name: List files in workspace
+        run: ls -R
+
+      # Step 4: SonarCloud Scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          args: >
+            -Dsonar.projectKey=MarcoMigl_Prova
+            -Dsonar.organization=marcomigl
+            -Dsonar.projectName=Prova
+            -Dsonar.sources=Codice
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
