--- a/.github/workflows/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/.github/workflows/sonarcloud.yml
@@ -37,6 +37,6 @@ jobs:
             -Dsonar.projectKey=MarcoMigl_Prova
             -Dsonar.organization=marcomigl
             -Dsonar.projectName=Prova
-            -Dsonar.sources=Prova/Codice
+            -Dsonar.sources=Codice
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
