--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,5 +1,6 @@
 name: SonarCloud Scan
 
+# Trigger del workflow: parte su push o PR verso main
 on:
   push:
     branches:
@@ -13,19 +14,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Prendi il codice del repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ Imposta Java 17 (richiesto da SonarCloud)
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Debug – opzionale
+      # 3️⃣ Debug (opzionale) – controlla che GitHub veda la cartella Codice
       - name: List workspace
         run: ls -R
 
+      # 4️⃣ Analisi SonarCloud
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         with:
