--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
+# sonar-project.properties
 sonar.projectKey=MarcoMigl_Prova
 sonar.organization=marcomigl
-sonar.projectName=Prova
-
 sonar.sources=Codice
+sonar.java.binaries=
