--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
-# sonar-project.properties
 sonar.projectKey=MarcoMigl_Prova
 sonar.organization=marcomigl
 sonar.sources=Codice
-sonar.java.binaries=
+sonar.java.binaries=  # lascialo vuoto
 sonar.language=java
+sonar.java.libraries=  # vuoto
+sonar.java.source=17
+sonar.exclusions=**/*.class
