--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -10,7 +10,6 @@ on:
 
 jobs:
   sonar:
-    name: SonarCloud
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -22,7 +21,13 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: Compile Java files
+        run: javac -d build $(find Codice -name "*.java")
+
       - name: Run SonarCloud Analysis
         uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.java.binaries=build
