--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,16 @@
+# Identificativo del progetto in SonarCloud
 sonar.projectKey=MarcoMigl_Prova
 sonar.organization=marcomigl
+sonar.projectName=Prova
+
+# Cartella dei sorgenti da analizzare
 sonar.sources=Codice
-sonar.java.binaries=  # lascialo vuoto
+
+# Nessuna compilazione: analisi solo sorgenti
+sonar.java.binaries=
+
+# Lingua principale del progetto
 sonar.language=java
-sonar.java.libraries=  # vuoto
-sonar.java.source=17
-sonar.exclusions=**/*.class
+
+# Encoding dei file
+sonar.sourceEncoding=UTF-8
