--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -31,4 +31,4 @@ jobs:
             -Dsonar.organization=marcomigl
             -Dsonar.projectName=Prova
             -Dsonar.sources=Codice
-            -Dsonar.java.binaries=   # vuoto: saltare compilazione
+            -Dsonar.java.binaries=
