--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,34 +1,41 @@
-name: SonarCloud Analysis
-
+name: SonarQube
 on:
   push:
     branches:
       - master
   pull_request:
-    branches:
-      - master
-
+    types: [opened, synchronize, reopened]
 jobs:
-  sonar:
+  build:
+    name: Build and analyze
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
         with:
-          distribution: temurin
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
           java-version: 17
-
-      - name: Run SonarCloud Analysis
-        uses: SonarSource/sonarcloud-github-action@v2
+          distribution: 'zulu' 
+      
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      
+      - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=MarcoMigl_Prova
-            -Dsonar.organization=marcomigl
-            -Dsonar.projectName=Prova
-            -Dsonar.sources=Codice
-            -Dsonar.java.binaries=
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=MarcoMigl_Prova
+        working-directory: ./demo
