--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -61,7 +61,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>appolloni.migliano.Main</mainClass>
+                    <mainClass>appolloni.migliano.MainCLI</mainClass>
                 </configuration>
             </plugin>
         </plugins>
